# home-periscope

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: test.yaml
config/: configuration.yaml
frontend/: .env  package.json  pnpm-lock.yaml
frontend/src/: App.css  App.js  index.js  reducers.js  store.js
frontend/src/api/: client.js
frontend/src/components/: TemperatureSlider.js
frontend/src/features/flameSize/: FlameSize.js  flameSizeSlice.js
frontend/src/features/stoveState/: StoveState.js  (+1 more)
src/main/: home_periscope.py
src/main/core/: configuration.py  container.py  sample_container.py
src/main/dashboard/: dashboard.py  dashboard_controller.py
src/main/flame_size/: flame_size.py  flame_size_controller.py  flame_size_repository.py
src/main/stove_state/: stove_state.py  stove_state_controller.py  stove_state_repository.py
src/main/summer_mode/: summer_mode.py  summer_mode_controller.py  summer_mode_repository.py
src/main/temperature/: heating_temperature_repository.py  mixer_temperature_repository.py  temperature.py  temperature_controller.py  water_heater_temperature_repository.py
src/sample/: flame_size_sample_repository.py  heating_temperature_sample_repository.py  mixer_temperature_sample_repository.py  stove_state_sample_repository.py  summer_mode_sample_repository.py  water_heater_sample_temperature_repository.py
src/stove_connector/: stream_stove_data.py
src/tests/: test_app.py  test_flame_size.py  test_stove_state.py  test_summary_mode.py  test_temperature.py
static/: index.html
(+6 files in other folders)
